--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ SpeechRecognition==3.8.1
 streamlit==1.10.0
 PyAudio==0.2.11
 scipy==1.7.1
-streamlit-webrtc==0.42.0
-sounddevice
+streamlit-bokeh-events==0.1.2
+
+bokeh==2.4.3
 
